--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,16 @@ a {
 td.task_text {
   white-space: pre-wrap;
 }
+
+textarea.edit {
+  width: 100%;
+  min-height: 40px;
+  box-sizing: border-box;
+}
+
+textarea.create {
+  max-width: 500px;
+  width: 100%;
+  min-height: 60px;
+  box-sizing: border-box;
+}
